Stop layout shift & stop form submit default
cards no longer shift on hover

Started function that adds new todo item.
it includes "preventDefault" for submit button

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -6,7 +6,7 @@
   /* background-color: var(--sidebar); */
   background-color: #000;
   display: flex;
-
+  border: 2px solid transparent;
   align-items: center;
   margin-bottom: 8px;
   border-radius: 2px;
